[package]
name = "libviprs"
version = "0.1.4"
edition = "2024"
authors = ["Roman Goldmann <roman@devshell.org>"]
rust-version = "1.85"
description = "A pure-Rust, thread-safe image pyramiding engine for blueprint PDFs and raster images"
license = "MIT"
repository = "https://github.com/libviprs/libviprs"
homepage = "https://libviprs.org"
keywords = ["image", "pyramid", "tiles", "deepzoom", "pdf"]
categories = ["multimedia::images", "graphics"]
readme = "README.md"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
deprecated = "deny"

[lints.clippy]
incompatible_msrv = "warn"

[features]
default = []
pdfium = ["dep:pdfium-render"]
pdfium-static = ["pdfium", "pdfium-render/static"]
s3 = ["dep:object_store", "dep:tokio"]
tracing = ["dep:tracing"]
packfile = ["dep:tar", "dep:zip"]
checksum = []
dedupe = []

[dependencies]
blake3 = "1.8.4"
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
lopdf = "0.36"
object_store = { version = "0.11", optional = true, features = ["aws"] }
pdfium-render = { version = "0.8", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tar = { version = "0.4.45", optional = true }
thiserror = "2"
tokio = { version = "1", optional = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { version = "0.1", optional = true }
zip = { version = "7.2.0", optional = true }

[dev-dependencies]
loom = "0.7"
proptest = "1"
tempfile = "3"
